comienzo a hacer las secciones del main

--- a/index.html
+++ b/index.html
@@ -11,9 +11,12 @@
 </head>
 
 <body>
+    <div class="bgheader"></div>
+    <div class="degheader"></div>
     <header>
         <div class="parth-1">
-            <h1 class="tit">4Mathics</h1>
+            <h1>4</h1>
+            <h1 class="tit">Mathics</h1>
         </div>
         <div class="parth-2">
             <nav>
@@ -28,7 +31,10 @@
     </header>
     <main>
         <section>
-            
+            <p class="textsection1">"El idioma de la naturaleza es la matématica"</p>
+        </section>
+        <section>
+            <h1>¿Busca la ayuda de un matématico?</h1>
         </section>
     </main>
     <footer>
