dando forma la seccion 2

--- a/index.html
+++ b/index.html
@@ -31,10 +31,12 @@
     </header>
     <main>
         <section>
-            <p class="textsection1">"El idioma de la naturaleza es la matématica"</p>
+            <p class="textsection1">"El idioma de la naturaleza es la matemática"</p>
         </section>
-        <section>
-            <h1>¿Busca la ayuda de un matématico?</h1>
+        <section class="section2">
+            <h1 class="titsection2"><u>¿Busca la ayuda de un matemático?</u></h1>
+            <p class="textsection2"><b>¿Por qué son tan difíciles las matemáticas?</b>. El aprendizaje de las matemáticas es complejo y debe acompañarse de una maduración neurobiológica oportuna que permita alcanzar un nivel de desarrollo cognitivo capaz de sustentar los aprendizajes matemáticos. </p>
+            <img src="pics/img2sec2.jpg" alt="estudios frustrados" class="imgsection2">
         </section>
     </main>
     <footer>
