seccion 3 terminada, seccion 1 sigue

--- a/index.html
+++ b/index.html
@@ -35,8 +35,41 @@
         </section>
         <section class="section2">
             <h1 class="titsection2"><u>¿Busca la ayuda de un matemático?</u></h1>
-            <p class="textsection2"><b>¿Por qué son tan difíciles las matemáticas?</b>. El aprendizaje de las matemáticas es complejo y debe acompañarse de una maduración neurobiológica oportuna que permita alcanzar un nivel de desarrollo cognitivo capaz de sustentar los aprendizajes matemáticos. </p>
+            <p class="textsection2 textsiz1"><b>¿Por qué son tan difíciles las matemáticas?</b>. El aprendizaje de las
+                matemáticas es complejo y lento. Esto se debe a que a los humanos, especialmente cuando se ve por
+                primera vez la logica de la matemática, tenemos serios problemas en la abstracción de cualquier
+                concepto. Es dificil entender cosas sin poder imaginarlas o contemplarlas desde alguna percepción.<br>
+                De esta manera se nos ocurrio algo <b>brillante</b>.<br>
+                Reunimos a los matemáticos para que piensen por vos las cosas y te devuelvan ese conocimiento en la
+                forma que vos necesites.</p>
             <img src="pics/img2sec2.jpg" alt="estudios frustrados" class="imgsection2">
+        </section>
+
+        <section>
+            <div class="titsec3">
+                <h1 class="tit3 titcent">CURSOS</h1>
+            </div>
+            <div class="div2sec3">
+                <div class="curso1">
+                    <div class="imgcurso1">
+                        <img src="pics/matematicas.png" alt="Calculo diferencial">
+                    </div>
+                    <div>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione, commodi!</p>
+                    </div>
+                </div>
+                <div class="curso2">
+                    <div class="imgcurso2">
+                        <img src="pics/rubik.png" alt="analisis">
+                    </div>
+                    <div>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Magni, sed.</p>
+                    </div>
+                </div>
+                <div class="curso3">
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quisquam, totam.</p>
+                </div>
+            </div>
         </section>
     </main>
     <footer>
