anteultimo commit en seccion 3

--- a/index.html
+++ b/index.html
@@ -52,10 +52,12 @@
             <div class="div2sec3">
                 <div class="curso1">
                     <div class="imgcurso1">
-                        <img src="pics/matematicas.png" alt="Calculo diferencial">
+                        <img src="pics/funcion (1).png" alt="Calculo diferencial">
                     </div>
                     <div>
+                        <h1>Cálculo diferencial</h1>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione, commodi!</p>
+                        <a href="#">Ir al curso</a>
                     </div>
                 </div>
                 <div class="curso2">
@@ -63,11 +65,20 @@
                         <img src="pics/rubik.png" alt="analisis">
                     </div>
                     <div>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Magni, sed.</p>
+                        <h1>Cálculo Integral</h1>
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Magni, sed.</p>
+                        <a href="#">Ir al curso</a>
                     </div>
                 </div>
                 <div class="curso3">
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quisquam, totam.</p>
+                    <div class="imgcurso3">
+                        <img src="pics/parabola.png" alt="funcion">
+                    </div>
+                    <div>
+                        <h1>Análisis Matemático</h1>
+                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quisquam, totam.</p>
+                        <a href="#">Ir al curso</a>
+                    </div>
                 </div>
             </div>
         </section>
