modificacion de la seccion 2 del main

--- a/index.html
+++ b/index.html
@@ -33,18 +33,81 @@
         <section>
             <p class="textsection1">"El idioma de la naturaleza es la matemática"</p>
         </section>
-        <section class="section2">
-            <h1 class="titsection2"><u>¿Busca la ayuda de un matemático?</u></h1>
-            <p class="textsection2 textsiz1"><b>¿Por qué son tan difíciles las matemáticas?</b>. El aprendizaje de las
-                matemáticas es complejo y lento. Esto se debe a que a los humanos, especialmente cuando se ve por
-                primera vez la logica de la matemática, tenemos serios problemas en la abstracción de cualquier
-                concepto. Es dificil entender cosas sin poder imaginarlas o contemplarlas desde alguna percepción.<br>
-                De esta manera se nos ocurrio algo <b>brillante</b>.<br>
-                Reunimos a los matemáticos para que piensen por vos las cosas y te devuelvan ese conocimiento en la
-                forma que vos necesites.</p>
-            <img src="pics/img2sec2.jpg" alt="estudios frustrados" class="imgsection2">
+        <section>
+            <div class="titsection2">
+                <h1><u>¿Por qué elegir nuestros cursos?</u></h1>
+            </div>
+            <div class="div1sec2">
+                <div><img src="pics/eficaz.png" alt="eficazicon"></div>
+                <div>
+                    <h3>EFICAZ</h3>
+                    <p>Nuestros cursos son tan eficaces que podes terminarlos muy rapidamente.</p>
+                </div>
+            </div>
+            <div class="div2sec2">
+                <div>
+                    <img src="pics/eficiencia.png" alt="eficienciaicon">
+                </div>
+                <div>
+                    <h3>EFICIENTE</h3>
+                    <p>Un curso eficiente da como resultado un buen aprendisaje.</p>
+                </div>
+            </div>
+            <div class="div3sec2">
+                <div>
+                    <img src="pics/gratis.png" alt="maquinadejuegos">
+                </div>
+                <div>
+                    <h3>GRATIS</h3>
+                    <p>No hagamos que la matemática nos cueste mas.</p>
+                </div>
+            </div>
+            <div class="div4sec2">
+                <div>
+                    <img src="pics/maquina-de-arcade.png" alt="maquinadejuegos">
+                </div>
+                <div>
+                    <h3>ENTRETENIDO</h3>
+                    <p>Nos gusta enseñar, nos divertimos haciendolo.</p>
+                </div>
+            </div>
+            <div class="div5sec2">
+                <div>
+                    <img src="pics/asegurado.png" alt="maquinadejuegos">
+                </div>
+                <div>
+                    <h3>SEGURO</h3>
+                    <p>Es seguro en 9,9999% que con nuestros cursos vas a aprender.</p>
+                </div>
+            </div>
+            <div class="div6sec2">
+                <div>
+                    <img src="pics/tiempo-rapido.png" alt="maquinadejuegos">
+                </div>
+                <div>
+                    <h3>RAPIDO</h3>
+                    <p>Aprende rapido y sin retrasos.</p>
+                </div>
+            </div>
+            <div class="div7sec2">
+                <div>
+                    <img src="pics/facil.png" alt="maquinadejuegos">
+                </div>
+                <div>
+                    <h3>FACIL</h3>
+                    <p>Es facil si te enseñan bien.</p>
+                </div>
+            </div>
+            <div class="div8sec2">
+                <div>
+                    <img src="pics/trabajo-en-equipo.png" alt="maquinadejuegos">
+                </div>
+                <div>
+                    <h3>JUNTOS</h3>
+                    <p>Nosotros tambien estamos aprendiendo de vos.</p>
+                </div>
+            </div>
         </section>
-
         <section>
             <div class="titsec3">
                 <h1 class="tit3 titcent">CURSOS</h1>
@@ -80,6 +143,11 @@
                         <a href="#">Ir al curso</a>
                     </div>
                 </div>
+            </div>
+        </section>
+        <section>
+            <div>
+                <h1></h1>
             </div>
         </section>
     </main>
