agregadas algunas transiciones

--- a/courses.html
+++ b/courses.html
@@ -37,8 +37,8 @@
     </header>
     <main>
         <section>
-            <div class="titleprinc">
-                <h1>¡Estos son los cursos que tenemos para vos!</h1>
+            <div class="principaltitle">
+                <h1>Estos son los cursos que tenemos para vos</h1>
             </div>
             <div class="coursecontainer">
                 <div>
@@ -48,10 +48,11 @@
                     </div>
                     <div class="levelpartinf">
                         <div class="levelpartinftitle">Curso de introducción a las Derivadas</div>
-                        <div class="levelpartinfdescription">En este curso aprenderás, desde cero, a derivar funciones
+                        <div class="levelpartinfdescription">En este curso aprenderás, desde cero, el concepto de la derivada y a derivar funciones
                             por
                             definición y por regla. Conocerás el criterio de la 1° y 2° derivada
-                            y su importancia en el Análisis Matemático.</div>
+                            y la información que aporta para el Análisis Matemático.</div>
+                            <div class="levelpartinfbutton">EMPEZAR A APRENDER</div>
                     </div>
                 </div>
                 <div>
@@ -65,6 +66,7 @@
                             integrar
                             funciones. Resolverás integrales inmediatas utilizando las tablas de integración y conocerás
                             algunas propiedades como la integración por sustitución y por partes.</div>
+                        <div class="levelpartinfbutton">EMPEZAR A APRENDER</div>
                     </div>
                 </div>
                 <div>
@@ -78,6 +80,7 @@
                             definidos y, en ciertas ocasiones, impropios. Utilizarás el teorema fundamental del Cálculo
                             y la
                             Regla de Barrow para averiguar áreas bajo curvas de determinadas funciones.</div>
+                        <div class="levelpartinfbutton">EMPEZAR A APRENDER</div>
                     </div>
                 </div>
             </div>
