agregue los href al header para el archivo index.html y courses.html

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
         <div class="parth-2">
             <nav>
                 <ul>
-                    <li class="itul bgb"><a href="#">Inicio</a></li>
-                    <li class="itul"><a href="#">Cursos</a></li>
+                    <li class="itul bgb"><a href="index.html">Inicio</a></li>
+                    <li class="itul"><a href="courses.html">Cursos</a></li>
                     <li class="itul"><a href="#">Publicaciones</a></li>
                     <li class="itul"><a href="#">Soporte</a></li>
                 </ul>
@@ -35,7 +35,7 @@
         </section>
         <section>
             <div class="titsection2">
-                <h1><u>¿Por qué elegir nuestros cursos?</u></h1>
+                <h1>¿Por qué elegir nuestros cursos?</h1>
             </div>
             <div class="div1sec2">
                 <div><img src="pics/eficaz.png" alt="eficazicon"></div>
@@ -146,8 +146,11 @@
             </div>
         </section>
         <section>
-            <div>
-                <h1></h1>
+            <div class="div1sec4">
+                <h1>CONTACTANOS</h1>
+            </div>
+            <div class="div2sec4">
+                <a href="#">SOPORTE</a>
             </div>
         </section>
     </main>
