--- a/courses.html
+++ b/courses.html
@@ -48,11 +48,12 @@
                     </div>
                     <div class="levelpartinf">
                         <div class="levelpartinftitle">Curso de introducción a las Derivadas</div>
-                        <div class="levelpartinfdescription">En este curso aprenderás, desde cero, el concepto de la derivada y a derivar funciones
+                        <div class="levelpartinfdescription">En este curso aprenderás, desde cero, el concepto de la
+                            derivada y a derivar funciones
                             por
                             definición y por regla. Conocerás el criterio de la 1° y 2° derivada
                             y la información que aporta para el Análisis Matemático.</div>
-                            <div class="levelpartinfbutton">EMPEZAR A APRENDER</div>
+                        <div class="levelpartinfbutton">EMPEZAR A APRENDER</div>
                     </div>
                 </div>
                 <div>
@@ -82,6 +83,17 @@
                             Regla de Barrow para averiguar áreas bajo curvas de determinadas funciones.</div>
                         <div class="levelpartinfbutton">EMPEZAR A APRENDER</div>
                     </div>
+                </div>
+            </div>
+        </section>
+        <section>
+            <div class="testexample">
+                <div class="textzone">
+                    <div class="titulogrande">¡Pon a prueba tus conocimientos!</div>
+                    <div class="titulopequeño">Todos nuestros cursos incluyen un examen al final del mismo</div>
+                </div>
+                <div class="containerimg">
+                    <div class="imgtest"><img src="pics/test.png" alt=""></div>
                 </div>
             </div>
         </section>
