modificacion del incio, linkeo. seccion 1 modificada. agrego iframe. prueba en corregir el header para que quede mejor.

--- a/index.html
+++ b/index.html
@@ -31,7 +31,19 @@
     </header>
     <main>
         <section>
-            <p class="textsection1">"El idioma de la naturaleza es la matemática"</p>
+            <div class="div1sec1">
+                <h2>¿Por qué estudiar Matemáticas?</h2>
+                <p>Las matemáticas son una materia fundamental en nuestra vida diaria. Nos ayudan a entender el mundo que nos rodea y a tomar decisiones informadas. Desde calcular el cambio en una tienda hasta planificar una ruta de viaje, las matemáticas están presentes en muchas situaciones cotidianas.<br>
+
+                Además, estudiar matemáticas desarrolla habilidades importantes como el pensamiento lógico, la resolución de problemas y la capacidad de análisis. Estas habilidades son valiosas en cualquier campo de estudio o trabajo, y pueden ayudarnos a tener éxito en nuestras metas personales y profesionales.<br>
+                    
+                Por último, las matemáticas también tienen un lado fascinante y hermoso. Desde las simetrías en la naturaleza hasta los misterios del universo, las matemáticas nos permiten explorar y comprender el mundo de una manera única.<br>
+                    
+                En resumen, estudiar matemáticas es importante porque nos ayuda a entender el mundo, desarrollar habilidades valiosas y explorar la belleza de la matemática. <b>¡Así que no tengas miedo de sumergirte en el fascinante mundo de las matemáticas!</b></p>
+            </div>
+            <div class="div2sec1">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/RlUZv0MoVWk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" ></iframe>
+            </div>
         </section>
         <section>
             <div class="titsection2">
@@ -119,8 +131,8 @@
                     </div>
                     <div>
                         <h1>Cálculo diferencial</h1>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione, commodi!</p>
-                        <a href="#">Ir al curso</a>
+                        <p>Adentrate en el mundo de las derivadas con este curso.</p>
+                        <a href="courses.html #cursos">Ir al curso</a>
                     </div>
                 </div>
                 <div class="curso2">
@@ -129,8 +141,8 @@
                     </div>
                     <div>
                         <h1>Cálculo Integral</h1>
-                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Magni, sed.</p>
-                        <a href="#">Ir al curso</a>
+                        <p>Estudia a fondo las Integrales y aprende a calcular cualquier área!</p>
+                        <a href="courses.html #cursos">Ir al curso</a>
                     </div>
                 </div>
                 <div class="curso3">
@@ -139,8 +151,8 @@
                     </div>
                     <div>
                         <h1>Análisis Matemático</h1>
-                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quisquam, totam.</p>
-                        <a href="#">Ir al curso</a>
+                        <p>¿Te gustan los desafios? Hace todo junto con este curso.</p>
+                        <a href="courses.html #cursos">Ir al curso</a>
                     </div>
                 </div>
             </div>
