--- a/courses.html
+++ b/courses.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="pics/favicon.ico" type="ico" sizes="16px">
     <link rel="stylesheet" href="courses.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -12,8 +13,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@300&display=swap" rel="stylesheet">
-
-    <title>Document</title>
+    <title>4Mathics</title>
 </head>
 
 <body>
@@ -40,7 +40,7 @@
             <div class="principaltitle">
                 <h1>Estos son los cursos que tenemos para vos</h1>
             </div>
-            <div class="coursecontainer">
+            <div class="coursecontainer" id="cursos">
                 <div>
                     <div class="levelpartsup">
                         <div class="imgstyle1"></div>
