modificaciones finales del inicio. modificacion final del header. inserto header modificado en la pagina html de courses, modifico el css para que se vea correctamente

--- a/courses.html
+++ b/courses.html
@@ -27,8 +27,8 @@
         <div class="parth-2">
             <nav>
                 <ul>
-                    <li class="itul bgb"><a href="index.html">Inicio</a></li>
-                    <li class="itul"><a href="courses.html">Cursos</a></li>
+                    <li class="itul"><a href="index.html">Inicio</a></li>
+                    <li class="itul bgb"><a href="courses.html">Cursos</a></li>
                     <li class="itul"><a href="#">Publicaciones</a></li>
                     <li class="itul"><a href="#">Soporte</a></li>
                 </ul>
