--- a/index.html
+++ b/index.html
@@ -11,8 +11,6 @@
 </head>
 
 <body>
-    <div class="bgheader"></div>
-    <div class="degheader"></div>
     <header>
         <div class="parth-1">
             <h1>4</h1>
@@ -132,7 +130,7 @@
                     <div>
                         <h1>Cálculo diferencial</h1>
                         <p>Adentrate en el mundo de las derivadas con este curso.</p>
-                        <a href="courses.html #cursos">Ir al curso</a>
+                        <a href="courses.html">Ir al curso</a>
                     </div>
                 </div>
                 <div class="curso2">
@@ -142,7 +140,7 @@
                     <div>
                         <h1>Cálculo Integral</h1>
                         <p>Estudia a fondo las Integrales y aprende a calcular cualquier área!</p>
-                        <a href="courses.html #cursos">Ir al curso</a>
+                        <a href="courses.html">Ir al curso</a>
                     </div>
                 </div>
                 <div class="curso3">
@@ -152,7 +150,7 @@
                     <div>
                         <h1>Análisis Matemático</h1>
                         <p>¿Te gustan los desafios? Hace todo junto con este curso.</p>
-                        <a href="courses.html #cursos">Ir al curso</a>
+                        <a href="courses.html">Ir al curso</a>
                     </div>
                 </div>
             </div>
