Cambios a Courses en la ultima seccion

--- a/courses.html
+++ b/courses.html
@@ -97,6 +97,97 @@
                 </div>
             </div>
         </section>
+        <section>
+            <div class="content">
+                <div>
+                    <div class="descriptiontitle">Curso de introducción a las derivadas</div>
+                    <div class="descriptiontext">Hay un mundo antes y después de la derivada. En este curso conocerás el
+                        concepto de derivada
+                        partiendo del limite. Derivarás por definición y por regla utilizando la tabla de derivadas.
+                        Aprenderás algunas propiedades
+                        como la regla de la cadena y el teorema del "sandwich" y finalmente analizarás el comportamiento
+                        de las funciones mediante
+                        el criterio de la primera y segunda derivada.
+                    </div>
+                    <div class="titletemary">Temario:</div>
+                    <div class="descriptionlist">
+                        <ul>
+                            <li>La recta secante y tangente en un punto.</li>
+                            <li>Límite y pendiente de la recta tangente en un punto.</li>
+                            <li>Derivada por definición.</li>
+                            <li>Derivada por regla y tabla de derivadas.</li>
+                            <li>Derivada del producto y del cociente de funciones.</li>
+                            <li>Derivada de una función compuesta. Regla de la cadena.</li>
+                            <li>Derivada de sen(x) / x. Teorema del "Sandwich".</li>
+                            <li>Criterio de la primera y segunda derivada.</li>
+                            <li>Analisis de funciones: puntos críticos e intervalos de crecimiento y decrecimiento</li>
+                        </ul>
+                    </div>
+                    <div class="coursebuttoncontainer">
+                        <div class="coursebuttontext">EMPEZAR CURSO</div>
+                    </div>
+                </div>
+                <div>2</div>
+                <div>
+                    <div class="descriptiontitle">Curso de introducción a las derivadas</div>
+                    <div class="descriptiontext">Hay un mundo antes y después de la derivada. En este curso conocerás el
+                        concepto de derivada
+                        partiendo del limite. Derivarás por definición y por regla utilizando la tabla de derivadas.
+                        Aprenderás algunas propiedades
+                        como la regla de la cadena y el teorema del "sandwich" y finalmente analizarás el comportamiento
+                        de las funciones mediante
+                        el criterio de la primera y segunda derivada.
+                    </div>
+                    <div class="titletemary">Temario:</div>
+                    <div class="descriptionlist">
+                        <ul>
+                            <li>La recta secante y tangente en un punto.</li>
+                            <li>Límite y pendiente de la recta tangente en un punto.</li>
+                            <li>Derivada por definición.</li>
+                            <li>Derivada por regla y tabla de derivadas.</li>
+                            <li>Derivada del producto y del cociente de funciones.</li>
+                            <li>Derivada de una función compuesta. Regla de la cadena.</li>
+                            <li>Derivada de sen(x) / x. Teorema del "Sandwich".</li>
+                            <li>Criterio de la primera y segunda derivada.</li>
+                            <li>Analisis de funciones: puntos críticos e intervalos de crecimiento y decrecimiento</li>
+                        </ul>
+                    </div>
+                    <div class="coursebuttoncontainer">
+                        <div class="coursebuttontext">EMPEZAR CURSO</div>
+                    </div>
+                </div>
+                <div>4</div>
+                <div>
+                    <div class="descriptiontitle">Curso de introducción a las derivadas</div>
+                    <div class="descriptiontext">Hay un mundo antes y después de la derivada. En este curso conocerás el
+                        concepto de derivada
+                        partiendo del limite. Derivarás por definición y por regla utilizando la tabla de derivadas.
+                        Aprenderás algunas propiedades
+                        como la regla de la cadena y el teorema del "sandwich" y finalmente analizarás el comportamiento
+                        de las funciones mediante
+                        el criterio de la primera y segunda derivada.
+                    </div>
+                    <div class="titletemary">Temario:</div>
+                    <div class="descriptionlist">
+                        <ul>
+                            <li>La recta secante y tangente en un punto.</li>
+                            <li>Límite y pendiente de la recta tangente en un punto.</li>
+                            <li>Derivada por definición.</li>
+                            <li>Derivada por regla y tabla de derivadas.</li>
+                            <li>Derivada del producto y del cociente de funciones.</li>
+                            <li>Derivada de una función compuesta. Regla de la cadena.</li>
+                            <li>Derivada de sen(x) / x. Teorema del "Sandwich".</li>
+                            <li>Criterio de la primera y segunda derivada.</li>
+                            <li>Analisis de funciones: puntos críticos e intervalos de crecimiento y decrecimiento</li>
+                        </ul>
+                    </div>
+                    <div class="coursebuttoncontainer">
+                        <div class="coursebuttontext">EMPEZAR CURSO</div>
+                    </div>
+                </div>
+                <div>6</div>
+            </div>
+        </section>
 </body>
 
 </html>
