+ imagenes, restan ultimar detalles

--- a/courses.html
+++ b/courses.html
@@ -53,7 +53,7 @@
                             por
                             definición y por regla. Conocerás el criterio de la 1° y 2° derivada
                             y la información que aporta para el Análisis Matemático.</div>
-                        <div class="levelpartinfbutton">EMPEZAR A APRENDER</div>
+                        <div class="levelpartinfbutton"><a href="#derivada">EMPEZAR A APRENDER</a></div>
                     </div>
                 </div>
                 <div>
@@ -67,7 +67,7 @@
                             integrar
                             funciones. Resolverás integrales inmediatas utilizando las tablas de integración y conocerás
                             algunas propiedades como la integración por sustitución y por partes.</div>
-                        <div class="levelpartinfbutton">EMPEZAR A APRENDER</div>
+                        <div class="levelpartinfbutton"><a href="#integrales">EMPEZAR A APRENDER</a></div>
                     </div>
                 </div>
                 <div>
@@ -81,7 +81,7 @@
                             definidos y, en ciertas ocasiones, impropios. Utilizarás el teorema fundamental del Cálculo
                             y la
                             Regla de Barrow para averiguar áreas bajo curvas de determinadas funciones.</div>
-                        <div class="levelpartinfbutton">EMPEZAR A APRENDER</div>
+                        <div class="levelpartinfbutton"><a href="#calcIntegral">EMPEZAR A APRENDER</a></div>
                     </div>
                 </div>
             </div>
@@ -93,7 +93,7 @@
                     <div class="titulopequeño">Todos nuestros cursos incluyen un examen al final del mismo</div>
                 </div>
                 <div class="containerimg">
-                    <div class="imgtest"><img src="pics/test.png" alt=""></div>
+                    <div class="imgtest" id="derivada"><img src="pics/test.png" alt=""></div>
                 </div>
             </div>
         </section>
@@ -117,75 +117,73 @@
                             <li>Derivada por definición.</li>
                             <li>Derivada por regla y tabla de derivadas.</li>
                             <li>Derivada del producto y del cociente de funciones.</li>
-                            <li>Derivada de una función compuesta. Regla de la cadena.</li>
+                            <li id="integrales">Derivada de una función compuesta. Regla de la cadena.</li>
                             <li>Derivada de sen(x) / x. Teorema del "Sandwich".</li>
                             <li>Criterio de la primera y segunda derivada.</li>
                             <li>Analisis de funciones: puntos críticos e intervalos de crecimiento y decrecimiento</li>
+                            <li>Evaluación</li>
                         </ul>
                     </div>
-                    <div class="coursebuttoncontainer">
-                        <div class="coursebuttontext">EMPEZAR CURSO</div>
-                    </div>
                 </div>
-                <div>2</div>
+                <div class="containerimg">
+                    <div><img src="pics/axis.png" alt=""></div>
+                </div>
+                <div class="buttoncourse">
+                    <div class="buttontext">EMPEZAR EL CURSO</div>
+                </div>
                 <div>
-                    <div class="descriptiontitle">Curso de introducción a las derivadas</div>
-                    <div class="descriptiontext">Hay un mundo antes y después de la derivada. En este curso conocerás el
-                        concepto de derivada
-                        partiendo del limite. Derivarás por definición y por regla utilizando la tabla de derivadas.
-                        Aprenderás algunas propiedades
-                        como la regla de la cadena y el teorema del "sandwich" y finalmente analizarás el comportamiento
-                        de las funciones mediante
-                        el criterio de la primera y segunda derivada.
+                    <div class="descriptiontitle">Curso de introducción a las Integrales</div>
+                    <div class="descriptiontext">Las integrales son una parte esencial del cálculo y se utilizan en una amplia variedad de
+                         disciplinas, como la física, la ingeniería, la economía y la estadística, entre otras. En este curso aprenderás a hallar la función
+                         primitiva o antiderivada de una función dada utilizando la tabla de integrales y algunas propiedades como la integración por sustitución y
+                         la integración por partes.
                     </div>
                     <div class="titletemary">Temario:</div>
                     <div class="descriptionlist">
                         <ul>
-                            <li>La recta secante y tangente en un punto.</li>
-                            <li>Límite y pendiente de la recta tangente en un punto.</li>
-                            <li>Derivada por definición.</li>
-                            <li>Derivada por regla y tabla de derivadas.</li>
-                            <li>Derivada del producto y del cociente de funciones.</li>
-                            <li>Derivada de una función compuesta. Regla de la cadena.</li>
-                            <li>Derivada de sen(x) / x. Teorema del "Sandwich".</li>
-                            <li>Criterio de la primera y segunda derivada.</li>
-                            <li>Analisis de funciones: puntos críticos e intervalos de crecimiento y decrecimiento</li>
+                            <li>Derivada y antiderivada.</li>
+                            <li>Partes de una integral: integrando y diferencial de integración.</li>
+                            <li>Integrales indefinidas.</li>
+                            <li>Integral de una constante por una función.</li>
+                            <li>Integral de la suma y de la resta de funciones.</li>
+                            <li id="calcIntegral">Integración por sustitución.</li>
+                            <li>Integración por partes.</li>
+                            <li>Evaluación.</li>
                         </ul>
                     </div>
-                    <div class="coursebuttoncontainer">
-                        <div class="coursebuttontext">EMPEZAR CURSO</div>
-                    </div>
                 </div>
-                <div>4</div>
+                <div class="containerimg">
+                    <div><img src="pics/axis.png" alt=""></div>
+                </div>
+                <div class="buttoncourse">
+                    <div class="buttontext">EMPEZAR EL CURSO</div>
+                </div>
                 <div>
-                    <div class="descriptiontitle">Curso de introducción a las derivadas</div>
-                    <div class="descriptiontext">Hay un mundo antes y después de la derivada. En este curso conocerás el
-                        concepto de derivada
-                        partiendo del limite. Derivarás por definición y por regla utilizando la tabla de derivadas.
-                        Aprenderás algunas propiedades
-                        como la regla de la cadena y el teorema del "sandwich" y finalmente analizarás el comportamiento
-                        de las funciones mediante
-                        el criterio de la primera y segunda derivada.
+                    <div class="descriptiontitle">Curso de Cálculo Integral</div>
+                    <div class="descriptiontext">Existen dos tipos principales de integrales: la integral definida y la integral indefinida.
+                         La integral definida se utiliza para calcular el área exacta bajo una curva en un intervalo específico. En este curso se continuará
+                         con lo visto en el Curso de Introducción a las Integrales para calcular áreas bajo y entre curvas y resolver integrales con limites infinitos.
                     </div>
                     <div class="titletemary">Temario:</div>
                     <div class="descriptionlist">
                         <ul>
-                            <li>La recta secante y tangente en un punto.</li>
-                            <li>Límite y pendiente de la recta tangente en un punto.</li>
-                            <li>Derivada por definición.</li>
-                            <li>Derivada por regla y tabla de derivadas.</li>
-                            <li>Derivada del producto y del cociente de funciones.</li>
-                            <li>Derivada de una función compuesta. Regla de la cadena.</li>
-                            <li>Derivada de sen(x) / x. Teorema del "Sandwich".</li>
-                            <li>Criterio de la primera y segunda derivada.</li>
-                            <li>Analisis de funciones: puntos críticos e intervalos de crecimiento y decrecimiento</li>
+                            <li>Aproximación de areas: la suma de Riemann.</li>
+                            <li>Los límites de integración.</li>
+                            <li>El teorema fundamental del Cálculo Integral.</li>
+                            <li>Área bajo la curva.</li>
+                            <li>Área entre dos curvas.</li>
+                            <li>Límites de integración infinitos.</li>
+                            <li>Integrales impropias.</li>
+                            <li>Evaluación.</li>
                         </ul>
                     </div>
-                    <div class="coursebuttoncontainer">
-                        <div class="coursebuttontext">EMPEZAR CURSO</div>
-                    </div>
                 </div>
-                <div>6</div>
+                <div class="containerimg">
+                    <div><img src="pics/funcion.png" alt=""></div>
+                </div>
+                <div class="buttoncourse">
+                    <div class="buttontext">EMPEZAR EL CURSO</div>
+                </div>
             </div>
         </section>
 </body>
